fix dayof slider on mobile

--- a/hack-at-brown-2015/static/css/day_of.css
+++ b/hack-at-brown-2015/static/css/day_of.css
@@ -34,7 +34,7 @@ body:before {
 }
 
 #header-content {
-	min-width: 600px;
+	min-width: 750px;
 }
 
 #header img {
